# graphql-tutorial

./: .gitignore  pyproject.toml  readme.md
graphql-tutorial/: .env  Makefile  docker-compose.yaml  dot_env_example
graphql-tutorial/backend/: Dockerfile  requirements.txt
graphql-tutorial/backend/project_backend/main/: admin.py  models.py  schema.py  serializers.py  views.py
graphql-tutorial/backend/project_backend/main/fixtures/: ingredients.json  questions.json
graphql-tutorial/backend/project_backend/main/migrations/: 0001_initial.py  0002_question.py
graphql-tutorial/backend/project_backend/main/snippets/: create_question.snippet  get_ingredients.snippet  update_question.snippet
graphql-tutorial/backend/project_backend/project/: _settings.py  urls.py
graphql-tutorial/backend/project_backend/project/settings/: __init__.py  base.py  development.py  production.py
graphql-tutorial/backend/scripts/: start-backend.sh
